# UniversalVideoDownloader

./: CMakeLists.txt  README.md  [SweetSub] VIRGIN PUNK - 01 Clockwork Girl [BDRip][1080P][AVC 8bit][CHS][v3].mp4.aria2  cli_runner.cpp  cli_runner.h  compile_commands.json  download_utils.cpp  download_utils.h  mainwindow.cpp  mainwindow.h  platformutils.cpp  platformutils.h  thememanager.cpp  thememanager.h  toolmanager.cpp  toolmanager.h  url_extractor.cpp  url_extractor.h
.cache/clangd/index/: cli_runner.cpp.867E3D47FFECC1AA.idx  cli_runner.h.F1B3FE40202858EE.idx  download_utils.cpp.608F982082460339.idx  download_utils.h.F73B54A425A798AC.idx  main.cpp.502A8A3A3F36B5C7.idx  mainwindow.cpp.B765D1240310ECDE.idx  mainwindow.h.2250D137C6FB29DF.idx  platformutils.cpp.6A9D6CC759E74853.idx  platformutils.h.25E6FC278E86AA73.idx  toolmanager.cpp.13537892153F04D3.idx  toolmanager.h.5EA61BBE99DA2599.idx  url_extractor.cpp.5E7EA7B4BF7A335D.idx  url_extractor.h.685622A7CD6FA692.idx
.github/workflows/: windows-build.yml
